--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -4,4 +4,82 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  &__rolex-moblie {
+    position: absolute;
+    z-index: -1;
+    margin-bottom: 25vh;
+
+    & img {
+      max-width: 600px;
+      width: 90vw;
+      padding-left: 3.5%;
+    }
+  }
+  &__form-container {
+    margin-top: 20vh;
+  }
+  &__form-submit {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    border-radius: 20px;
+    border: 1px solid black;
+    background-color: #790220;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all ease 0.25s;
+    color: whitesmoke;
+    font-size: 1rem;
+    width: 15rem;
+    &__arrow {
+      font-size: 2rem;
+      margin-left: 2rem;
+    }
+    &:hover {
+      color: #790220;
+      background-color: #f1f3ff73;
+      border-color: #790220;
+      cursor: pointer;
+    }
+  }
+  &__form__title {
+    background-color: #790220;
+    padding: 1rem;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    width: 70vw;
+    max-width: 500px;
+    border-radius: 30px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #790220;
+
+    & p {
+      color: white;
+      width: 60%;
+      text-align: center;
+    }
+  }
+  &__form-items {
+    display: flex;
+    width: fit-content;
+    flex-direction: column;
+    background-color: white;
+    padding: 1rem;
+    align-items: center;
+    width: 70vw;
+    max-width: 500px;
+    border-radius: 0px 0px 30px 0px;
+    border: 1px solid black;
+    &__text-field {
+      margin-top: 1rem !important;
+    }
+    & form {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
