--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -1,15 +1,12 @@
 .Landing {
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   &__rolex-moblie {
     position: absolute;
     z-index: -1;
-    margin-bottom: 25vh;
-
     & img {
       max-width: 600px;
       width: 90vw;
@@ -80,6 +77,32 @@
     & form {
       display: flex;
       flex-direction: column;
+    }
+  }
+  &__banner-container {
+    align-self: center;
+    display: flex;
+    font-size: 4rem;
+    width: 100vw;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50vh;
+    &__item {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      font-size: 6rem;
+    }
+    &__arrow {
+      display: flex;
+      transform: rotate(90deg);
+      margin-top: 5vh;
+      margin-bottom: 5vh;
+      color: #790220;
+    }
+    & p {
+      font-size: 1.3rem;
     }
   }
 }
