--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -8,13 +8,16 @@
     position: absolute;
     z-index: -1;
     & img {
-      max-width: 600px;
+      max-width: 450px;
       width: 90vw;
       padding-left: 3.5%;
     }
   }
   &__form-container {
     margin-top: 20vh;
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+      0 2px 6px 2px rgb(60 64 67 / 15%);
+    border-radius: 30px;
   }
   &__form-submit {
     margin-top: 3rem;
@@ -30,6 +33,7 @@
     color: whitesmoke;
     font-size: 1rem;
     width: 15rem;
+
     &__arrow {
       font-size: 2rem;
       margin-left: 2rem;
@@ -52,7 +56,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #790220;
+    border: 1px solid black;
+    border-bottom: none;
 
     & p {
       color: white;
@@ -71,6 +76,7 @@
     max-width: 500px;
     border-radius: 0px 0px 30px 0px;
     border: 1px solid black;
+
     &__text-field {
       margin-top: 1rem !important;
     }
@@ -87,7 +93,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    margin-top: 50vh;
+    margin-top: 20vh;
     &__item {
       display: flex;
       align-items: center;
@@ -103,6 +109,30 @@
     }
     & p {
       font-size: 1.3rem;
+    }
+  }
+  &__about-container {
+    // border: 1px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    & h1 {
+      letter-spacing: 2px;
+      background: linear-gradient(
+        180deg,
+        transparent 70%,
+        rgb(200, 57, 57) 70%,
+        rgb(200, 57, 57) 95%,
+        transparent 95%
+      );
+    }
+    & p {
+      max-width: 80vw;
+      font-size: 1.2rem;
+      line-height: 3rem;
+      letter-spacing: 1px;
+      text-align: left;
     }
   }
 }
