--- a/front-end/src/styles/Acordain.scss
+++ b/front-end/src/styles/Acordain.scss
@@ -21,9 +21,13 @@
     background-color: rgb(242, 239, 239);
   }
   &__question {
-    padding: 0.5rem;
+    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+
     font-size: 0.65rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   &__answer {
     display: flex;
