--- a/front-end/src/styles/Footer.scss
+++ b/front-end/src/styles/Footer.scss
@@ -1,20 +1,29 @@
 .Footer {
   width: 100vw;
   max-height: 6rem;
-  background-color: #1010106e;
+  background-color: #242951e9;
   color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+
   padding-top: 1rem;
   padding-bottom: 1rem;
-  & p {
-    display: flex;
-    align-items: center;
-    margin: 5px;
-    &:hover {
-      color: #900b2c;
+  & a {
+    text-decoration: none;
+    color: white;
+    &:active {
+      color: white;
     }
+    &:hover {
+      color: rgb(189, 196, 255);
+    }
+  }
+  &__icon-container {
+    display: flex;
+    width: 60vw;
+    min-width: 400px;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
