--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -1,4 +1,106 @@
 .Dashboard {
   display: flex;
   min-height: 100vh;
+  overflow-x: hidden;
+  flex-direction: column;
+  max-width: 100vw;
+  &-nav-horizontal {
+    background-color: #242951e9;
+    color: white;
+    padding: 0.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease 0.3s;
+    min-height: 3rem;
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+      0 2px 6px 2px rgb(60 64 67 / 15%);
+    &-logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 5px;
+      & img {
+        width: 100%;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  &-nav-toggle {
+    font-size: 2.5rem;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 85vw;
+    position: absolute;
+    &:hover {
+      cursor: pointer;
+      color: rgb(237, 255, 229);
+    }
+  }
+  &-nav-vertical {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 7rem;
+    width: 100vw;
+    background-color: #790220;
+    color: white;
+    transition: all ease 0.3s;
+    transform: translateX(-100%);
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+      0 2px 6px 2px rgb(60 64 67 / 15%);
+  }
+  &-nav-vertical-item {
+    margin-top: 3rem;
+    min-height: 50vh;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  &-nav-vertical-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: 2rem;
+    padding: 10px;
+
+    & p {
+      font-size: 1rem;
+    }
+    &:hover {
+      color: #790220;
+      background-color: whitesmoke;
+      cursor: pointer;
+    }
+  }
+  &-content-container {
+    display: flex;
+    &-screen {
+      transition: all ease 0.25s;
+      min-width: 100vw;
+      overflow: hidden;
+      flex-shrink: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid red;
+    }
+  }
+}
+
+@media (min-width: 900px) {
+  .Dashboard {
+    &-nav-vertical {
+      min-width: 12rem;
+      & p {
+        padding-left: 1rem;
+      }
+    }
+  }
 }
