--- a/front-end/src/styles/Register.scss
+++ b/front-end/src/styles/Register.scss
@@ -23,15 +23,18 @@
       font-size: 1.5rem;
       letter-spacing: 2px;
       background-color: #5b6bdde9;
-      border: 1px solid #242951e9;
+      border: 1px solid #7180f1e9;
+      box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+        0 2px 6px 2px rgb(60 64 67 / 15%);
       border-radius: 20px;
-      width: fit-content;
+      width: 160px;
       transition: all ease 0.3s;
       &:hover {
         cursor: pointer;
         background-color: white;
         color: #5b6bdde9;
         border-color: #5b6bdde9;
+        border-radius: 23px;
       }
     }
     & h1 {
