--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -99,15 +99,18 @@
   }
   &-active {
     color: #6529dc;
-    background-color: whitesmoke;
+    background-color: rgb(240, 240, 240);
   }
 }
-
+.Home {
+  border: 1px solid red;
+  width: 100vw;
+}
 .Tracking {
   width: 60vw;
   min-width: fit-content;
   max-width: 700px;
-  margin-left: 5rem;
+
   margin-top: 20vh;
   // border: 1px solid red;
   display: flex;
@@ -148,9 +151,6 @@
         padding-left: 1rem;
       }
     }
-  }
-  .Tracking {
-    margin-left: 20vw;
   }
 }
 
