--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -145,6 +145,47 @@
     }
   }
 }
+.Orders {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  & h1 {
+    margin-bottom: 2rem;
+    background: linear-gradient(
+      180deg,
+      transparent 80%,
+      rgba(152, 9, 9, 0.5) 80%,
+      rgb(226, 100, 100) 90%,
+      transparent 95%
+    );
+  }
+  &-dropdown {
+    width: 40%;
+    min-width: 200px;
+    max-width: 500px;
+  }
+}
+.OrderView {
+  border: 1px solid rgb(238, 155, 155);
+  border-radius: 20px;
+  // padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  & h2 {
+    font-size: 2rem;
+  }
+  &-main {
+    & p {
+      & span {
+        color: rgba(99, 69, 69, 0.647);
+      }
+    }
+  }
+}
 
 @media (min-width: 900px) {
   .Dashboard {
