--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -76,7 +76,7 @@
     max-width: 350px;
     border-radius: 0px 0px 30px 0px;
     border: 1px solid black;
-
+    min-height: 450px;
     &__text-field {
       margin-top: 1rem !important;
     }
@@ -123,8 +123,8 @@
       background: linear-gradient(
         180deg,
         transparent 80%,
-        rgb(152, 9, 9) 80%,
-        rgb(152, 9, 9) 95%,
+        #6f02795d 80%,
+        #4902793a 95%,
         transparent 95%
       );
     }
@@ -166,6 +166,65 @@
       & img {
         width: 100%;
         max-width: 1200px;
+      }
+    }
+  }
+}
+.LandingBox {
+  &-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: white;
+    padding: 1rem;
+    width: 70vw;
+    max-width: 350px;
+    min-height: 450px;
+    border-radius: 0px 0px 30px 0px;
+    border: 1px solid black;
+    & button {
+      align-self: flex-end;
+      color: white;
+      padding: 1rem;
+      padding-left: 2rem;
+      padding-right: 2rem;
+      font-size: 1.8rem;
+      background-color: #790220;
+      border: 1px solid #a52c4a;
+      box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+        0 2px 6px 2px rgb(60 64 67 / 15%);
+      border-radius: 20px;
+      transition: all ease 0.3s;
+      margin-bottom: 30%;
+      width: 80%;
+      &:hover {
+        cursor: pointer;
+        background-color: whitesmoke;
+        color: #790220;
+        border-radius: 23px;
+      }
+    }
+    &-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      & h1 {
+        margin-bottom: 2rem;
+        background: linear-gradient(
+          180deg,
+          transparent 80%,
+          rgba(152, 9, 9, 0.5) 80%,
+          rgb(226, 100, 100) 90%,
+          transparent 95%
+        );
+      }
+      & span {
+        max-width: 300px;
+        overflow: hidden;
+        font-size: 2.3rem;
+        color: #6f0707;
       }
     }
   }
