--- a/front-end/src/styles/index.scss
+++ b/front-end/src/styles/index.scss
@@ -2,6 +2,9 @@
 * {
   font-family: "Lato", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -9,6 +12,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+:root {
+  --dashboard-nav-color: #242951e9;
 }
 
 code {
