--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -42,7 +42,7 @@
     z-index: 1;
     &:hover {
       cursor: pointer;
-      color: rgb(237, 255, 229);
+      color: whitesmoke;
     }
   }
   &-nav-vertical {
@@ -204,7 +204,6 @@
   border: 0.5px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
   border-radius: 20px;
-  // padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -257,6 +256,29 @@
         }
       }
     }
+  }
+}
+
+.Account {
+  display: flex;
+  width: 100vw;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  & h1 {
+    color: var(--dashboard-nav-color);
+  }
+  &-fields {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 600px;
+    width: 90%;
+    gap: 1rem;
+    overflow: scroll;
+    padding-top: 2rem;
+    border: 1px solid red;
   }
 }
 
