--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -17,7 +17,7 @@
     margin-top: 20vh;
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
       0 2px 6px 2px rgb(60 64 67 / 15%);
-    border-radius: 30px 0px 30px 0px;
+    border-radius: 30px;
   }
   &__form-submit {
     margin-top: 3rem;
@@ -52,7 +52,7 @@
     padding-top: 0px;
     width: 70vw;
     max-width: 350px;
-    border-radius: 30px 0px 0px 0px;
+    border-radius: 30px 30px 0px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,6 +141,61 @@
   }
 }
 
+.LandingBox {
+  &-content {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: white;
+    padding: 1rem;
+    padding-bottom: 3rem;
+    width: 70vw;
+    max-width: 350px;
+    min-height: 300px;
+    height: fit-content;
+    border-radius: 0px 0px 30px 30px;
+    border: 1px solid black;
+    gap: 2rem;
+    & button {
+      align-self: flex-end;
+      color: white;
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      font-size: 1.5rem;
+      background-color: #790220;
+      border: 1px solid #a52c4a;
+      box-shadow: 0 1px 2px 0 rgb(60 64 67 / 20%),
+        0 2px 6px 2px rgb(60 64 67 / 10%);
+      border-radius: 8px;
+
+      transition: all ease 0.2s;
+      width: 70%;
+      &:hover {
+        cursor: pointer;
+        background-color: white;
+        color: #790220;
+        border-radius: 13px;
+      }
+    }
+    &-text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+
+      & span {
+        max-width: 300px;
+        overflow: hidden;
+        font-size: 2.3rem;
+        color: #6f0707;
+      }
+    }
+  }
+}
+
 @media (min-width: 800px) {
   .Landing {
     align-items: flex-start;
@@ -167,64 +222,6 @@
       & img {
         width: 100%;
         max-width: 1200px;
-      }
-    }
-  }
-}
-.LandingBox {
-  &-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: white;
-    padding: 1rem;
-    padding-bottom: 3rem;
-    width: 70vw;
-    max-width: 350px;
-    min-height: 450px;
-    border-radius: 0px 0px 30px 0px;
-    border: 1px solid black;
-    & button {
-      align-self: flex-end;
-      color: white;
-      padding: 1rem;
-
-      font-size: 1.5rem;
-      background-color: #790220;
-      border: 1px solid #a52c4a;
-      box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
-        0 2px 6px 2px rgb(60 64 67 / 15%);
-      border-radius: 20px;
-      transition: all ease 0.3s;
-      width: 70%;
-      &:hover {
-        cursor: pointer;
-        background-color: whitesmoke;
-        color: #790220;
-        border-radius: 23px;
-      }
-    }
-    &-text {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      & h1 {
-        margin-bottom: 2rem;
-        background: linear-gradient(
-          180deg,
-          transparent 80%,
-          rgba(152, 9, 9, 0.5) 80%,
-          rgb(226, 100, 100) 90%,
-          transparent 95%
-        );
-      }
-      & span {
-        max-width: 300px;
-        overflow: hidden;
-        font-size: 2.3rem;
-        color: #6f0707;
       }
     }
   }
