--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -55,8 +55,7 @@
     color: white;
     transition: all ease 0.3s;
     transform: translateX(-100%);
-    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
-      0 2px 6px 2px rgb(60 64 67 / 15%);
+    box-shadow: 0 1px 2px 0 #79022036, 0 2px 6px 2px #79022036;
     position: absolute;
     z-index: 1;
   }
@@ -84,7 +83,7 @@
     }
     &:hover {
       color: #790220;
-      background-color: whitesmoke;
+      background-color: white;
       cursor: pointer;
     }
   }
@@ -93,7 +92,7 @@
   }
   &-screen {
     transition: all ease 0.25s;
-    min-width: 100vw;
+    max-width: 100vw;
     max-height: 100vh;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -102,7 +101,7 @@
   }
   &-active {
     color: #6529dc;
-    background-color: rgb(240, 240, 240);
+    background-color: white;
   }
 }
 .Home {
@@ -182,8 +181,10 @@
   flex-direction: column;
   width: 100vw;
   height: 90vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   padding-bottom: 1rem;
+
   & h1 {
     margin-bottom: 2rem;
   }
@@ -288,8 +289,10 @@
     }
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 650px) {
   .OrderView {
+    max-width: 80vw;
+
     &-main {
       flex-direction: column;
       align-items: center;
