--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -72,3 +72,12 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .Navbar {
+    & a {
+      font-size: 0.8rem;
+      margin-left: 1rem;
+    }
+  }
+}
