--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -11,7 +11,6 @@
     color: white;
     padding: 0.25rem;
     display: flex;
-
     justify-content: center;
     align-items: center;
     transition: all ease 0.3s;
@@ -257,10 +256,18 @@
 .Account {
   display: flex;
   width: 100vw;
+  min-height: 100vh;
+  padding-bottom: 4rem;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  &-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70vw;
+  }
   & h1 {
     color: var(--dashboard-nav-color);
   }
@@ -273,7 +280,28 @@
     gap: 1rem;
     overflow: scroll;
     padding-top: 2rem;
-    border: 1px solid red;
+  }
+  &-submit {
+    color: white;
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    background-color: var(--dashboard-nav-color);
+    border: 1px solid rgba(255, 255, 255, 0.181);
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+      0 2px 6px 2px rgb(60 64 67 / 15%);
+    border-radius: 20px;
+    width: 160px;
+    transition: all ease 0.3s;
+    &:hover {
+      cursor: pointer;
+      background-color: white;
+      color: #6529dc;
+      border-color: #6529dc;
+      border-radius: 23px;
+    }
   }
 }
 
