--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -94,8 +94,7 @@
     transition: all ease 0.25s;
     max-width: 100vw;
     max-height: 100vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: scroll;
     flex-shrink: 0;
     display: flex;
   }
@@ -256,12 +255,13 @@
 .Account {
   display: flex;
   width: 100vw;
-  min-height: 100vh;
+  max-height: 85vh;
   padding-bottom: 4rem;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  overflow: scroll;
   &-container {
     display: flex;
     flex-direction: column;
