--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -71,6 +71,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    flex-direction: column;
     text-align: center;
     font-size: 2rem;
     padding: 10px;
@@ -158,7 +159,7 @@
     max-height: 1.5rem;
   }
   & button {
-    background-color: #9b2442;
+    background-color: var(--dashboard-nav-color);
     color: white;
     font-size: 1.3rem;
     padding: 0.5rem 2rem 0.5rem 2rem;
@@ -275,11 +276,12 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    height: 600px;
+    height: fit-content;
     width: 90%;
     gap: 1rem;
     overflow: scroll;
     padding-top: 2rem;
+    margin-bottom: 2rem;
   }
   &-submit {
     color: white;
