--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -151,6 +151,7 @@
     &-title {
       color: white;
       font-size: 1.5rem;
+      text-align: center;
     }
     &-container {
       width: 88%;
@@ -221,9 +222,9 @@
     margin-right: 4rem;
   }
   .Landing-Reviews {
-    border-color: blue;
     &-container {
-      width: 400px;
+      width: 90vw;
+      max-width: 400px;
       display: flex;
       justify-content: flex-start;
       gap: 0rem;
