--- a/front-end/src/styles/index.scss
+++ b/front-end/src/styles/index.scss
@@ -15,6 +15,8 @@ body {
 }
 :root {
   --dashboard-nav-color: #242951e9;
+  --pos-animation-shift: 80vw;
+  --neg-animation-shift: -80vw;
 }
 
 code {
