--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -15,13 +15,13 @@
     }
   }
   &__form-container {
-    margin-top: 20vh;
+    margin-top: 5rem;
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
       0 2px 6px 2px rgb(60 64 67 / 15%);
     border-radius: 30px;
   }
   &__form-submit {
-    margin-top: 3rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
     padding: 0.5rem;
     border-radius: 20px;
@@ -48,11 +48,10 @@
   }
   &__form__title {
     background-color: #790220;
-    padding: 1rem;
     padding-bottom: 0px;
     padding-top: 0px;
-    width: 70vw;
-    max-width: 350px;
+    width: 80vw;
+    max-width: 550px;
     border-radius: 30px 30px 0px 0px;
     display: flex;
     justify-content: center;
@@ -71,19 +70,31 @@
     width: fit-content;
     flex-direction: column;
     background-color: white;
-    padding: 1rem;
     align-items: center;
-    width: 70vw;
-    max-width: 350px;
+    width: 80vw;
+    max-width: 550px;
     border-radius: 0px 0px 30px 0px;
     border: 1px solid black;
     min-height: 450px;
+    padding-top: 1rem;
     &__text-field {
       margin-top: 1rem !important;
     }
     & form {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      max-width: 600px;
+    }
+    &-inputs {
+      margin: 0.5rem !important;
+      &-passwords {
+        padding-top: 1rem;
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+      }
     }
   }
   &__banner-container {
@@ -171,7 +182,7 @@
     background-color: white;
     padding: 1rem;
     padding-bottom: 3rem;
-    width: 70vw;
+    width: 75vw;
     max-width: 350px;
     min-height: 300px;
     height: fit-content;
