--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -19,6 +19,7 @@
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
       0 2px 6px 2px rgb(60 64 67 / 15%);
     border-radius: 30px;
+    width: fit-content;
   }
   &__form-submit {
     margin-top: 1rem;
@@ -182,7 +183,6 @@
     background-color: white;
     padding: 1rem;
     padding-bottom: 3rem;
-    width: 75vw;
     max-width: 350px;
     min-height: 300px;
     height: fit-content;
@@ -226,6 +226,17 @@
         color: #6f0707;
       }
     }
+  }
+  &-title {
+    background-color: #6f0707;
+    color: white;
+    display: flex;
+    border-radius: 30px 30px 0px 00px;
+    align-items: center;
+    justify-content: center;
+    padding-left: 1rem;
+    max-width: 350px;
+    letter-spacing: 2px;
   }
 }
 @media (max-width: 800px) {
