--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -91,9 +91,8 @@
     align-items: flex-end;
     gap: 20vw;
     transition: all ease 2s;
-    animation-timing-function: ease;
-    animation: 15s infinite alternate marketLoop;
-    letter-spacing: 2px;
+    animation: marketLoop 20s linear 0.1s infinite alternate none;
+    letter-spacing: 1px;
 
     & p {
       width: max-content;
