--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -15,11 +15,20 @@
     }
   }
   &__form-container {
-    margin-top: 5rem;
+    margin-bottom: 10vh;
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
       0 2px 6px 2px rgb(60 64 67 / 15%);
     border-radius: 30px;
     width: fit-content;
+    height: fit-content;
+    align-self: flex-end;
+  }
+  &__landing-wrapper {
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   &__form-submit {
     margin-top: 1rem;
@@ -234,9 +243,9 @@
     border-radius: 30px 30px 0px 00px;
     align-items: center;
     justify-content: center;
-    padding-left: 1rem;
-    max-width: 350px;
-    letter-spacing: 2px;
+    justify-content: center;
+    max-width: 390px;
+    letter-spacing: 3px;
   }
 }
 @media (max-width: 800px) {
@@ -256,10 +265,12 @@
 @media (min-width: 800px) {
   .Landing {
     align-items: flex-start;
-
     &__form-container {
-      align-self: flex-end;
-      margin-right: 5vw;
+      margin-bottom: 2rem;
+      margin-right: 1rem;
+    }
+    &__landing-wrapper {
+      flex-direction: column;
     }
     &__banner-container {
       flex-direction: row;
@@ -279,6 +290,27 @@
       & img {
         width: 100%;
         max-width: 1200px;
+      }
+    }
+  }
+}
+@media (max-width: 550px) {
+  .Landing-Form {
+    margin-top: 6vh;
+  }
+  .Landing__form {
+    &-container {
+      box-shadow: none;
+    }
+    &-items {
+      &-inputs {
+        width: 90%;
+        &-passwords {
+          flex-direction: column;
+          width: 90%;
+          align-items: center;
+          justify-content: center;
+        }
       }
     }
   }
