--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: center;
     min-height: 50vh;
+    overflow: hidden;
   }
   &__rolex-moblie {
     position: absolute;
