--- a/front-end/src/styles/Admin.scss
+++ b/front-end/src/styles/Admin.scss
@@ -3,13 +3,13 @@
   display: flex;
   flex-direction: column;
   max-height: 90vh;
+  margin: 1rem;
+  align-items: center;
   &-view {
     display: flex;
-    width: 85vw;
-    max-width: 1000px;
     justify-content: space-between;
     border: 2px solid var(--dashboard-nav-color);
-
+    width: 90%;
     padding: 1rem;
     &-disapproved {
       color: red;
@@ -57,13 +57,111 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 5px;
+    align-items: center;
     &-title {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding-right: 2rem;
       padding-left: 2rem;
+      align-self: flex-start;
+    }
+  }
+}
+.AdminMarket {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  max-height: 90vh;
+
+  &-map-container {
+    overflow: scroll;
+    max-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin: 1rem;
+  }
+  &-view {
+    border: 2px solid var(--dashboard-nav-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    & h1 {
+      font-size: 1.2rem;
+      font-weight: 500;
+      width: 50%;
+      max-width: 50%;
+      overflow: scroll;
+    }
+    &-price {
+      display: flex;
+      align-items: center;
+      &-money-icon {
+        color: green;
+      }
+    }
+    &-date {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      &-trash-icon:hover {
+        cursor: pointer;
+        color: red;
+      }
+    }
+  }
+  &-create-btn {
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+      0 2px 6px 2px rgb(60 64 67 / 15%);
+    width: 30%;
+    border: 1px solid var(--dashboard-nav-color);
+    background-color: var(--dashboard-nav-color);
+    color: white;
+    padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    align-self: center;
+    margin-top: 1rem;
+    transition: all ease 0.25s;
+    &:hover {
+      cursor: pointer;
+      background-color: white;
+      color: var(--dashboard-nav-color);
+    }
+  }
+  &-modal {
+    &-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      & input {
+        padding: 1rem;
+        font-size: 1.2rem;
+      }
+      & button {
+        padding: 1rem;
+        font-size: 1.2rem;
+        width: 50%;
+        align-self: center;
+        box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+          0 2px 6px 2px rgb(60 64 67 / 15%);
+        border: 1px solid var(--dashboard-nav-color);
+        background-color: var(--dashboard-nav-color);
+        color: white;
+        transition: all ease 0.25s;
+        &:hover {
+          cursor: pointer;
+          background-color: white;
+          color: var(--dashboard-nav-color);
+        }
+      }
     }
   }
 }
