customer modal upload images

--- a/front-end/src/styles/Form.scss
+++ b/front-end/src/styles/Form.scss
@@ -16,7 +16,7 @@
     padding: 1rem;
   }
   &-title {
-    margin-top: 10vh;
+    margin-top: 10rem;
 
     color: #790220;
     background: linear-gradient(
