--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -252,6 +252,50 @@
       }
     }
   }
+  &-documents {
+    &-camera {
+      margin-left: 1rem;
+      transition: color ease 0.35s !important;
+      &:hover {
+        color: var(--dashboard-nav-color) !important;
+        cursor: pointer;
+      }
+    }
+  }
+  &-modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    &-form {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      gap: 2rem;
+      & input {
+        width: 70%;
+      }
+      & button {
+        padding: 1rem;
+        font-size: 1.2rem;
+        width: 60%;
+
+        align-self: center;
+        box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+          0 2px 6px 2px rgb(60 64 67 / 15%);
+        border: 1px solid var(--dashboard-nav-color);
+        background-color: var(--dashboard-nav-color);
+        color: white;
+        transition: all ease 0.25s;
+        &:hover {
+          cursor: pointer;
+          background-color: white;
+          color: var(--dashboard-nav-color);
+        }
+      }
+    }
+  }
 }
 
 .Account {
@@ -283,6 +327,7 @@
     overflow: scroll;
     padding-top: 2rem;
     margin-bottom: 2rem;
+    border: 1px solid red;
   }
   &-submit {
     color: white;
