--- a/front-end/src/styles/Admin.scss
+++ b/front-end/src/styles/Admin.scss
@@ -197,11 +197,11 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      & input {
+      &-input {
         padding: 1rem;
         font-size: 1.2rem;
       }
-      & button {
+      &-button {
         padding: 1rem;
         font-size: 1.2rem;
         width: 50%;
