--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -95,10 +95,17 @@
     transition: all ease 2s;
     animation: marketLoop 30s linear 0.1s infinite alternate none;
     letter-spacing: 1px;
-    & p {
+    & div {
+      align-items: center;
+      justify-content: center;
       width: max-content;
-      font-size: 0.8rem;
-      font-weight: bold;
+      display: flex;
+      gap: 1rem;
+      & p,
+      span {
+        font-size: 0.8rem;
+        font-weight: bold;
+      }
     }
   }
 }
