--- a/front-end/src/styles/Footer.scss
+++ b/front-end/src/styles/Footer.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  overflow: hidden;
   padding-top: 1rem;
   padding-bottom: 1rem;
   & a {
