--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -93,7 +93,7 @@
     align-items: flex-end;
     gap: 20vw;
     transition: all ease 2s;
-    animation: marketLoop 30s linear 0.1s infinite alternate none;
+    animation: marketLoop 20s linear 0.1s infinite normal none;
     letter-spacing: 1px;
     & div {
       align-items: center;
