--- a/front-end/src/styles/Landing.scss
+++ b/front-end/src/styles/Landing.scss
@@ -29,7 +29,6 @@
     border-radius: 30px;
     width: fit-content;
     height: fit-content;
-    align-self: flex-end;
   }
   &__landing-wrapper {
     min-height: 100vh;
@@ -68,7 +67,6 @@
     background-color: #790220;
     padding-bottom: 0px;
     padding-top: 0px;
-    width: 80vw;
     max-width: 550px;
     border-radius: 30px 30px 0px 0px;
     display: flex;
@@ -79,8 +77,8 @@
 
     & p {
       color: white;
-      width: 60%;
-      text-align: center;
+      text-indent: 0px !important;
+      width: fit-content !important;
     }
   }
   &__form-items {
@@ -89,7 +87,6 @@
     flex-direction: column;
     background-color: white;
     align-items: center;
-    width: 80vw;
     max-width: 550px;
     border-radius: 0px 0px 30px 0px;
     border: 1px solid black;
@@ -110,7 +107,7 @@
       &-passwords {
         padding-top: 1rem;
         display: flex;
-        width: 100%;
+        width: 80%;
         justify-content: space-evenly;
       }
     }
@@ -149,7 +146,9 @@
     justify-content: center;
     flex-direction: column;
     width: 100vw;
-    & h1 {
+    overflow: hidden;
+
+    &-title {
       letter-spacing: 2px;
       background: linear-gradient(
         180deg,
@@ -200,7 +199,7 @@
     background-color: white;
     padding: 1rem;
     padding-bottom: 3rem;
-    max-width: 350px;
+    width: 356px;
     min-height: 300px;
     height: fit-content;
     border-radius: 0px 0px 30px 30px;
@@ -210,7 +209,7 @@
     & button {
       align-self: flex-end;
       color: white;
-      padding: 1rem;
+      padding: 1.3rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -221,9 +220,8 @@
       box-shadow: 0 1px 2px 0 rgb(60 64 67 / 20%),
         0 2px 6px 2px rgb(60 64 67 / 10%);
       border-radius: 8px;
-
       transition: all ease 0.2s;
-      width: 70%;
+      width: fit-content;
       &:hover {
         cursor: pointer;
         background-color: white;
@@ -253,9 +251,14 @@
     border-radius: 30px 30px 0px 00px;
     align-items: center;
     justify-content: center;
-    justify-content: center;
-    max-width: 390px;
+    width: 390px;
     letter-spacing: 3px;
+
+    & p {
+      width: fit-content;
+
+      text-indent: 0px;
+    }
   }
   &-contact {
     background-color: #6f0707ed;
@@ -265,9 +268,13 @@
     border-bottom: none;
     color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-
+    width: 388px;
+    & p {
+      text-indent: 0px;
+      width: fit-content;
+    }
     & a {
       padding: 0.25rem;
       text-decoration: none;
@@ -278,10 +285,49 @@
       align-items: center;
       gap: 1rem;
       font-weight: 600;
-      transition: all ease 1s;
+      transition: all ease 0.2s;
+      width: 390px;
+      padding-left: 4rem;
       &:hover {
         color: rgb(251, 222, 222);
       }
+    }
+  }
+}
+.desktop {
+  &-wrapper {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+  }
+  &-left {
+    border-radius: 30px;
+    padding: 3rem;
+    box-shadow: 0 1px 10px 0 rgba(0, 145, 255, 0.2),
+      0 6px 6px 2px rgba(64, 0, 255, 0.1);
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.411);
+    backdrop-filter: blur(5px);
+    margin-left: 5vw;
+
+    & p {
+      font-size: 1.3rem;
+      text-indent: 3rem;
+      line-height: 2rem;
+    }
+    &-title {
+      letter-spacing: 2px;
+      background: linear-gradient(
+        180deg,
+        transparent 80%,
+        #1802795d 80%,
+        #4902793a 95%,
+        transparent 95%
+      );
     }
   }
 }
@@ -332,6 +378,10 @@
   }
 }
 @media (max-width: 550px) {
+  .Landing__form__title {
+    & p {
+    }
+  }
   .Landing-Form {
     margin-top: 6vh;
   }
@@ -350,15 +400,5 @@
         }
       }
     }
-  }
-  .LandingBox-title {
-    // background-color: rgba(0, 0, 0, 0.3);
-  }
-  .LandingBox-contact {
-    background-image: none;
-    background-color: rgba(0, 0, 0, 0.3);
-    // & a {
-    //   background-color: rgba(122, 80, 240, 0.7);
-    // }
   }
 }
